--- a/package.json
+++ b/package.json
@@ -45,13 +45,13 @@
     "postcss-preset-env": "^7.0.1",
     "prompts": "^2.4.2",
     "react": "^18.2.0",
+    "react-app-polyfill": "^3.0.0",
+    "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
+    "react-refresh": "^0.11.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.5.2",
-    "react-app-polyfill": "^3.0.0",
-    "react-dev-utils": "^12.0.1",
-    "react-refresh": "^0.11.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
@@ -68,9 +68,9 @@
     "workbox-webpack-plugin": "^6.4.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -103,8 +103,11 @@
     "@storybook/react": "^8.5.8",
     "@storybook/react-webpack5": "^8.5.8",
     "@storybook/test": "^8.5.8",
+    "customize-cra": "^1.0.0",
     "eslint-plugin-storybook": "^0.11.3",
+    "image-webpack-loader": "^8.1.0",
     "prop-types": "^15.8.1",
+    "react-app-rewired": "^2.2.1",
     "storybook": "^8.5.8",
     "typescript": "^5.7.3",
     "typescript-styled-plugin": "^0.18.3",
